# wasmsign2

./: .gitignore  Cargo.toml  README.md  z.wasm
.ci/: common.sh  run_all.sh  test_detach_attach.sh  test_keygen.sh  test_show.sh  test_split.sh  test_verify_matrix.sh
.github/workflows/: ci.yml  rust.yml
ci/: test_multi_sign.sh  test_sign_verify.sh
src/: error.rs  keys.rs  lib.rs  main.rs  sig_sections.rs  varint.rs  wasm_module.rs
src/cli/: main.rs
src/lib/: Cargo.toml
src/lib/src/: error.rs  lib.rs  split.rs
src/lib/src/signature/: hash.rs  info.rs  keys.rs  matrix.rs  mod.rs  multi.rs  sig_sections.rs  simple.rs
src/lib/src/wasm_module/: mod.rs  varint.rs
src/signature/: mod.rs  sig_sections.rs
