[package]
name = "wasmsign2-cli"
version = "0.2.4"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "CLI tool to sign and verify WebAssembly modules"
readme = "README.md"
keywords = ["webassembly", "modules", "signatures"]
license = "MIT"
homepage = "https://github.com/wasm-signatures/design"
repository = "https://github.com/wasm-signatures/wasmsign2"
categories = ["cryptography", "wasm"]

[[bin]]
name = "wasmsign2"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "3.2.25", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
env_logger = { version = "0.11.5", default-features = false, features = [
    "humantime",
] }
regex = "1.10.6"
ureq = "2.10.1"
uri_encode = "1.0.2"
wasmsign2 = { version = "0.2.3", path = "src/lib" }

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
