[package]
name = "wasmsign2-cli"
version = "0.2.6"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "CLI tool to sign and verify WebAssembly modules"
readme = "README.md"
keywords = ["webassembly", "modules", "signatures"]
license = "MIT"
homepage = "https://github.com/wasm-signatures/design"
repository = "https://github.com/wasm-signatures/wasmsign2"
categories = ["cryptography", "wasm"]

[[bin]]
name = "wasmsign2"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5.53", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
env_logger = { version = "0.11.8", default-features = false, features = [
    "humantime",
] }
regex = "1.12.2"
ureq = "3.1.4"
uri_encode = "1.0.4"
wasmsign2 = { version = "0.2.6", path = "src/lib" }

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
