[package]
name = "wasmsign2"
version = "0.2.6"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "An implementation of the WebAssembly modules signatures proposal"
readme = "../../README.md"
keywords = ["webassembly", "modules", "signatures"]
license = "MIT"
homepage = "https://github.com/wasm-signatures/design"
repository = "https://github.com/wasm-signatures/wasmsign2"
categories = ["cryptography", "wasm"]

[dependencies]
anyhow = "1.0.100"
ct-codecs = "1.1.6"
ed25519-compact = { version = "2.1.1", features = ["pem"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
hmac-sha256 = "1.1.12"
log = "0.4.28"
regex = "1.12.2"
ssh-keys = { version = "0.1.4", optional = true }
thiserror = "2.0.17"

[features]
default = ["openssh"]
openssh = ["ssh-keys"]

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
